created second image

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h1>Salam</h1>
        <h2>kshdks</h2>
        <img src="./assets/image/bg.jpg" alt="">
+       <img src="./assets/image/bg2.jpg" alt="">
 </body>
 </html>
